--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,5 +1,8 @@
-<h2 class="section-title">{{ .titles.about }}</h2>
 
+<div class="gophercon-israel-logo">
+    <img alt="Gophercon Israel logo" src="img/logo.png" title="GopherCon Israel"></img>
+</div>
+<h2 class="section-title">{{ .titles.about }}</h2>
 <p itemprop="description">GopherCon Israel 2020 is the second GopherCon to be held in
     Israel.</p>
 
