--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -2,19 +2,20 @@
 <div class="gophercon-israel-logo">
     <img alt="Gophercon Israel logo" src="img/logo.png" title="GopherCon Israel"></img>
 </div>
-<h2 class="section-title">{{ .titles.about }}</h2>
-<p itemprop="description">GopherCon Israel 2020 is the second GopherCon to be held in
-    Israel.</p>
 
-<p> The conference will be held on February 3 at
-    <a href="https://expotelaviv.co.il/" target="_blank">
-        Expo Tel Aviv</a> </p>
-
-<p>400 Gophers will attend the event.
-    GopherCon brings the Go community together through its
-    events throughout the world. The GopherCon brand is
-    well known and respected for its high standards and
-    diverse appeal.</p>
-
-
+<h2 class="about title section-title">{{ .titles.about }}</h2>
+<div class="about body">
+    <p itemprop="description">GopherCon Israel 2020 is the second GopherCon to be held in
+        Israel.</p>
+    
+    <p> The conference will be held on February 3 at
+        <a href="https://expotelaviv.co.il/" target="_blank">
+            Expo Tel Aviv</a> </p>
+    
+    <p>400 Gophers will attend the event.
+        GopherCon brings the Go community together through its
+        events throughout the world. The GopherCon brand is
+        well known and respected for its high standards and
+        diverse appeal.</p>
+</div>
 . 
