--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -5,17 +5,18 @@
 
 <h2 class="about title section-title">{{ .titles.about }}</h2>
 <div class="about body">
-    <p itemprop="description">GopherCon Israel 2020 is the second GopherCon to be held in
-        Israel.</p>
+    <p itemprop="description">GopherCon Israel 2021 Workshops will be a virtual conference (you know why :).</p>
     
-    <p> The conference will be held on February 3 at
-        <a href="https://expotelaviv.co.il/" target="_blank">
-            Expo Tel Aviv</a> </p>
+    <p> The conference will take place on February 11th, 2021 and will feature several
+        workshops by leading Go developers. </p>
     
-    <p>400 Gophers will attend the event.
-        GopherCon brings the Go community together through its
-        events throughout the world. The GopherCon brand is
-        well known and respected for its high standards and
-        diverse appeal.</p>
+    <p>GopherCon is focused on the Go programming language, nevertheless, the topics
+        to be presented relate to many other domains, including: DevOps, cloud
+        computing, web programming, hacking and more.</p>
 </div>
 . 
+
+
+
+
+
