--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,22 +1,10 @@
+<h2 class="section-title">{{ .titles.about }}</h2>
 
-<div class="gophercon-israel-logo">
-    <img alt="Gophercon Israel logo" src="img/logo.png" title="GopherCon Israel"></img>
-</div>
+<p itemprop="description">GopherCon Israel 2021 Workshops will be a virtual conference (you know why :).</p>
 
-<h2 class="about title section-title">{{ .titles.about }}</h2>
-<div class="about body">
-    <p itemprop="description">GopherCon Israel 2021 Workshops will be a virtual conference (you know why :).</p>
-    
-    <p> The conference will take place on February 11th, 2021 and will feature several
-        workshops by leading Go developers. </p>
-    
-    <p>GopherCon is focused on the Go programming language, nevertheless, the topics
-        to be presented relate to many other domains, including: DevOps, cloud
-        computing, web programming, hacking and more.</p>
-</div>
-. 
+<p>The conference will take place on February 11th, 2021 and will feature several
+    workshops by leading Go developers.</p>
 
-
-
-
-
+<p>GopherCon is focused on the Go programming language, nevertheless, the topics
+    to be presented relate to many other domains, including: DevOps, cloud
+    computing, web programming, hacking and more.</p>
