--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -8,7 +8,7 @@
         </span>
   
       <h3 class="speakers-name">
-        <a href="{{ .url }}" target="_blank" title="{{ .name }}"> For more details go to {{ .name }} </a>
+        <a href="{{ .url }}" target="_blank" title="{{ .name }}"> To learn more, visit {{ .url }} </a>
       </h3>
       {{ range $b := .body }}
         <p class="speakers-bio">{{ .text }}</p> 
